[package]
name = "luminance-glutin"
version = "0.15.1"
license = "BSD-3-Clause"
authors = ["Dimitri Sabadie <dimitri.sabadie@gmail.com>"]
description = "Glutin support for luminance"
keywords = ["stateless", "type-safe", "graphics", "luminance", "glutin"]
categories = ["rendering::graphics-api"]
homepage = "https://github.com/phaazon/luminance-rs"
repository = "https://github.com/phaazon/luminance-rs"
documentation = "https://docs.rs/luminance-glutin"
readme = "README.md"
edition = "2021"
rust-version = "1.56.0"

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
#gl = "0.14"
glutin = { version = "0.30", default-features = false }
luminance = ">=0.46, <0.48"
luminance-gl = "0.19"
#winit = "0.27"

[features]
default = ["glx", "egl", "wgl"]
glx = ["glutin/glx"]
egl = ["glutin/egl"]
wgl = ["glutin/wgl"]
