[package]
name = "luminance-glutin"
version = "0.14.1"
license = "BSD-3-Clause"
authors = ["Dimitri Sabadie <dimitri.sabadie@gmail.com>"]
description = "Glutin support for luminance"
keywords = ["stateless", "type-safe", "graphics", "luminance", "glutin"]
categories = ["rendering::graphics-api"]
homepage = "https://github.com/phaazon/luminance-rs"
repository = "https://github.com/phaazon/luminance-rs"
documentation = "https://docs.rs/luminance-glutin"
readme = "README.md"
edition = "2021"
rust-version = "1.65.0"

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
gl = "0.14"
glutin = { version = "*", default-features = false }
luminance = { path = "../luminance" }
luminance-gl2 = { path = "../luminance-gl2" }

[features]
default = ["x11", "wayland"]
serde = ["glutin/serde"]
x11 = ["glutin/x11"]
wayland = ["glutin/wayland"]
